--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
     agent {
         docker {
-                    image 'maven:3-alpine'
-                    args '-v /root/.m2:/root/.m2'
+                    image 'gradle:jdk17-jammy'
+                    args '-v /root/.gradle:/root/.gradle'
                 }
     }
 
