--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,6 +20,7 @@ pipeline {
         stage('Deploy') {
             steps {
                 sh 'gradle bootrun'
+                sh 'gradle bootjar'
             }
         }
     }
