--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,26 +1,29 @@
 pipeline {
     agent {
         docker {
-                    image 'gradle:jdk17-jammy'
-                    args '-v /root/.gradle:/root/.gradle'
-                }
+            image 'maven:3-alpine'
+            args '-v /root/.m2:/root/.m2'
+        }
     }
-
     stages {
         stage('Build') {
             steps {
-                sh 'gradle clean'
+                sh 'mvn -B -DskipTests clean package'
             }
         }
         stage('Test') {
             steps {
-                sh 'gradle build'
+                sh 'mvn test'
+            }
+            post {
+                always {
+                    junit 'target/surefire-reports/*.xml'
+                }
             }
         }
-        stage('Deploy') {
+        stage('Deliver') {
             steps {
-                sh 'gradle bootjar'
-                sh 'docker build -t spring-boot-docker .'
+                sh './jenkins/scripts/deliver.sh'
             }
         }
     }
