--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,29 +1,26 @@
 pipeline {
     agent {
         docker {
-            image 'maven:3-alpine'
-            args '-v /root/.m2:/root/.m2'
-        }
+                    image 'gradle:jdk17-jammy'
+                    args '-v /root/.gradle:/root/.gradle'
+                }
     }
+
     stages {
         stage('Build') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                sh 'gradlew clean'
             }
         }
         stage('Test') {
             steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
+                sh 'gradlew build'
             }
         }
-        stage('Deliver') {
+        stage('Deploy') {
             steps {
-                sh './jenkins/scripts/deliver.sh'
+                sh 'gradlew bootjar'
+                sh 'docker build -t spring-boot-docker .'
             }
         }
     }
