--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,10 +1,5 @@
 pipeline {
-    agent {
-        docker {
-                    image 'gradle:jdk17-jammy'
-                    args '-v /root/.m2:/root/.m2'
-                }
-    }
+    agent any
 
     stages {
         stage('Compile') {
