修改 Jenkinsfile gradlew permission

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -61,5 +61,5 @@ pipeline {
 }
 
 def gradlew(String... args) {
-    sh "./gradlew ${args.join(' ')} -s"
+    sh "sudo ./gradlew ${args.join(' ')} -s"
 }
