修改 Jenkinsfile sh chmod+x

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -62,5 +62,6 @@ pipeline {
 
 def gradlew(String... args) {
     sh 'pwd'
+    sh 'sudo chmod +x gradlew'
     sh "./gradlew ${args.join(' ')} -s"
 }
