--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,9 @@
 pipeline {
-    agent any
+    agent {
+        docker{
+            image: 'openjdk:17-jdk-alpine'
+        }
+    }
 
     stages {
         stage('Compile') {
