修改 Jenkinsfile 配置jdk17环境变量

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,11 +1,14 @@
 pipeline {
-    agent {
-        docker{
-            image: 'openjdk:17-jdk-alpine'
-        }
+    agent any
+    environment{
+        JAVA_HOME '/usr/lib/jvm/java-17-openjdk-17.0.1.0.12-2.el8_5.x86_64'
     }
-
     stages {
+        stage('init'){
+            sh 'pwd'
+            sh 'sudo chmod +x gradlew'
+            sh 'java -version'
+        }
         stage('Compile') {
                 steps {
                     gradlew('clean', 'classes')
@@ -65,7 +68,5 @@ pipeline {
 }
 
 def gradlew(String... args) {
-    sh 'pwd'
-    sh 'sudo chmod +x gradlew'
     sh "./gradlew ${args.join(' ')} -s"
 }
