--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,8 +1,7 @@
 pipeline {
     agent any
-    environment{
-        JAVA_HOME '/usr/lib/jvm/java-17-openjdk-17.0.1.0.12-2.el8_5.x86_64'
-    }
+    env.JAVA_HOME '/usr/lib/jvm/java-17-openjdk-17.0.1.0.12-2.el8_5.x86_64'
+
     stages {
         stage('init'){
             sh 'pwd'
