--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,11 +2,13 @@ env.JAVA_HOME='/usr/lib/jvm/java-17-openjdk-17.0.1.0.12-2.el8_5.x86_64'
 pipeline {
     agent any
     stages {
-
         stage('init'){
-            sh 'pwd'
-            sh 'sudo chmod +x gradlew'
-            sh 'java -version'
+            steps {
+                sh 'pwd'
+                sh 'sudo chmod +x gradlew'
+                sh 'java -version'
+            }
+
         }
         stage('Compile') {
                 steps {
