修改 Jenkinsfile 配置jdk17环境变量5

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
                 sh 'pwd'
                 sh 'sudo chmod +x gradlew'
                 sh 'java -version'
+                sh 'printenv'
             }
 
         }
